tests/native-lib/fail-dep/alloc_uninit.stderr
warning: sharing memory with a native function called via FFI
  --> tests/native-lib/fail-dep/alloc_uninit.rs:LL:CC
   |
LL |     unsafe { write_byte_with_ofs(bytes, 0, 12) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ sharing memory with a native function
   |
   = help: when memory is shared with a native function call, Miri can only track initialisation and provenance on a best-effort basis
   = help: in particular, Miri assumes that the native call initializes all memory it has written to
   = help: Miri also assumes that any part of this memory may be a pointer that is permitted to point to arbitrary exposed memory
   = help: what this means is that Miri will easily miss Undefined Behavior related to incorrect usage of this shared memory, so you should not take a clean Miri run as a signal that your FFI code is UB-free
   = help: tracing memory accesses in native code is not yet fully implemented, so there can be further imprecisions beyond what is documented here

error: Undefined Behavior: reading memory at ALLOC[0x1..0x2], but memory is uninitialized at [0x1..0x2], and this operation requires initialized memory
  --> tests/native-lib/fail-dep/alloc_uninit.rs:LL:CC
   |
LL |     let _val = unsafe { *(bytes.cast::<u8>().offset(1)) };
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Undefined Behavior occurred here
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information

Uninitialized memory occurred at ALLOC[0x1..0x2], in this allocation:
ALLOC (C heap, size: 2, align: 2) {
    ╾0c[wildcard] (ptr fragment 0)╼ __                                           │ ━░
}

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to 1 previous error; 1 warning emitted

